Modified pom.xml to fix issues
CHANGES:
- compile via maven with releaseVer 22 and enable preview.
- Skip Tests when attempting to do a ``mvn install``.

Signed-off-by: schnow265 <thesnowbox@icloud.com>
Co-authored-by: Tiri <tiri0007@yahoo.com>